export enum CurrencyType {
    ETHEREUM = "ETHEREUM",
    BITCOIN = "BITCOIN",
}
